sandc/test/fixtures/astRegression/shouldFail/productions/importStatement/ImportShadowStar.sand
import shadow star.*;

pub class ImportShadowStar {
    
}